--- a/Assets/CSS/media.css
+++ b/Assets/CSS/media.css
@@ -46,7 +46,7 @@
 	.all-header .slogan {
 		width: 100%;
 		box-sizing: border-box;
-		grid-area: 1/2/2/3s;
+		grid-area: 1/2/2/3;
 	    margin: 0 auto;
 	    padding: 13px 12px;
 	    font-size: 12px;
